--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -27,51 +27,32 @@ Proxy = select, 🇨🇳CHT11, google, 🇭🇰GIA2, 🇭🇰CMI4, 🇭🇰IPLC3
 tw = select, Proxy, 🇨🇳CHT11
 game = select, DIRECT, Proxy, 🇭🇰IPLC32, 🇭🇰IPLC32
 AD = select, REJECT
+apple = select, DIRECT, Proxy
 
 [Rule]
+
 # SYSTEM直连规则
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/system.list,DIRECT
 RULE-SET,LAN,DIRECT
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
-
 //Siri
 USER-AGENT,*AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
-
-IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
-
 # >> App Store Preview
 DOMAIN,itunes.apple.com,Proxy
-
 DOMAIN,apps.apple.com,Proxy
-
 # >> Apple URL Shortener
 DOMAIN-SUFFIX,appsto.re,Proxy
-
-
 # >> TestFlight
 DOMAIN,beta.itunes.apple.com,Proxy
 DOMAIN,testflight.apple.com,Proxy
-
 # >> Spotlight
 DOMAIN,api-glb-sea.smoot.apple.com,Proxy
 # >> Dictionary
 DOMAIN,lookup-api.apple.com,Proxy
-
-
-DOMAIN,appleiphonecell.com,DIRECT
-DOMAIN-SUFFIX,aaplimg.com,DIRECT
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,me.com,DIRECT
-DOMAIN-SUFFIX,mzstatic.com,DIRECT
-DOMAIN-SUFFIX,itunes.com,DIRECT
-DOMAIN-SUFFIX,appstore.com,DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,DIRECT
-DOMAIN-SUFFIX,icloud-content.com,DIRECT
-DOMAIN-SUFFIX,apple.co,DIRECT
-DOMAIN-SUFFIX,apple.com,DIRECT
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/apple.list,apple
 
 # Proxy
 # > Youtube
