--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -4,7 +4,7 @@ skip-proxy = 192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0
 ipv6 = true
 enhanced-mode-by-rule = 1
 show-error-page-for-reject = false
-dns-server = 117.50.10.10, 114.114.114.114, system
+dns-server = 119.29.29.29, 8.8.4.4
 allow-wifi-access = false
 network-framework = false
 
