--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -17,13 +17,14 @@ network-framework = false
 🇭🇰CMI4 = ss, cmi4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇭🇰IPLC32 = ss, 118.178.241.44, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇺🇸BGP3 = ss, 175.102.11.145, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
-🇯🇵AZ4 = ss, 13.73.29.45, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇯🇵BBETC1 = ss, 103.96.3.229, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇯🇵AZ3 = ss, 52.246.179.142, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇯🇵NTT2 = ss, 140.227.211.250, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 
 google = ss, 34.80.227.122, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
 Proxy = select, 🇨🇳CHT11, google, 🇭🇰GIA2, 🇭🇰CMI4, 🇭🇰IPLC32
-油管 = select, Proxy, google, 🇺🇸GIA6, 🇺🇸BGP3
+油管 = select, Proxy, google, 🇺🇸BGP3, 🇯🇵NTT2 
 tw = select, Proxy, 🇨🇳CHT11
 game = select, DIRECT, Proxy, 🇭🇰IPLC32, 🇭🇰IPLC32
 AD = select, REJECT
