--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -1,10 +1,10 @@
 [General]
 loglevel = notify
 skip-proxy = 192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, 127.0.0.1, localhost, *.local
-ipv6 = true
+ipv6 = false
 enhanced-mode-by-rule = 1
-show-error-page-for-reject = false
-dns-server = 119.29.29.29, 8.8.4.4
+show-error-page-for-reject = true
+dns-server = 119.29.29.29, 223.5.5.5,system
 allow-wifi-access = false
 network-framework = false
 
@@ -31,28 +31,69 @@ AD = select, REJECT
 apple = select, DIRECT, Proxy
 
 [Rule]
+# Feeb
+DOMAIN-KEYWORD,epochtimes,REJECT
+DOMAIN-SUFFIX,881903.com,REJECT
+DOMAIN-SUFFIX,aboluowang.com,REJECT
+DOMAIN-SUFFIX,bannedbook.org,REJECT
+DOMAIN-SUFFIX,bldaily.com,REJECT
+DOMAIN-SUFFIX,china21.org,REJECT
+DOMAIN-SUFFIX,chinaaffairs.org,REJECT
+DOMAIN-SUFFIX,dajiyuan.com,REJECT
+DOMAIN-SUFFIX,dalianmeng.org,REJECT
+DOMAIN-SUFFIX,dkn.tv,REJECT
+DOMAIN-SUFFIX,dongtaiwang.com,REJECT
+DOMAIN-SUFFIX,edoors.com,REJECT
+DOMAIN-SUFFIX,epochweekly.com,REJECT
+DOMAIN-SUFFIX,falundafa.org,REJECT
+DOMAIN-SUFFIX,fgmtv.org,REJECT
+DOMAIN-SUFFIX,gardennetworks.com,REJECT
+DOMAIN-SUFFIX,gongyiluntan.org,REJECT
+DOMAIN-SUFFIX,gpass1.com,REJECT
+DOMAIN-SUFFIX,hrichina.org,REJECT
+DOMAIN-SUFFIX,huanghuagang.org,REJECT
+DOMAIN-SUFFIX,internetfreedom.org,REJECT
+DOMAIN-SUFFIX,kanzhongguo.com,REJECT
+DOMAIN-SUFFIX,lagranepoca.com,REJECT
+DOMAIN-SUFFIX,mh4u.org,REJECT
+DOMAIN-SUFFIX,mhradio.org,REJECT
+DOMAIN-SUFFIX,minghui.org,REJECT
+DOMAIN-SUFFIX,newrealmstudios.ca,REJECT
+DOMAIN-SUFFIX,ntdtv.com,REJECT
+DOMAIN-SUFFIX,ogate.org,REJECT
+DOMAIN-SUFFIX,open.com.hk,REJECT
+DOMAIN-SUFFIX,organcare.org.tw,REJECT
+DOMAIN-SUFFIX,qxbbs.org,REJECT
+DOMAIN-SUFFIX,renminbao.com,REJECT
+DOMAIN-SUFFIX,secretchina.com,REJECT
+DOMAIN-SUFFIX,shenyun.com,REJECT
+DOMAIN-SUFFIX,shenyunperformingarts.org,REJECT
+DOMAIN-SUFFIX,shenzhoufilm.com,REJECT
+DOMAIN-SUFFIX,soundofhope.org,REJECT
+DOMAIN-SUFFIX,theepochtimes.com,REJECT
+DOMAIN-SUFFIX,tiandixing.org,REJECT
+DOMAIN-SUFFIX,tuidang.org,REJECT
+DOMAIN-SUFFIX,velkaepocha.sk,REJECT
+DOMAIN-SUFFIX,watchinese.com,REJECT
+DOMAIN-SUFFIX,wixsite.com,REJECT
+DOMAIN-SUFFIX,wujie.net,REJECT
+DOMAIN-SUFFIX,wujieliulan.com,REJECT
+DOMAIN-SUFFIX,xinsheng.net,REJECT
+DOMAIN-SUFFIX,zhengjian.org,REJECT
+DOMAIN-SUFFIX,zhuichaguoji.org,REJECT
+
 
 # SYSTEM直连规则
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/system.list,DIRECT
-RULE-SET,LAN,DIRECT
+# RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/system.list,DIRECT
+
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
+
 //Siri
-USER-AGENT,*AssistantServices*,DIRECT
-USER-AGENT,MobileAsset*,DIRECT
-USER-AGENT,Siri*,DIRECT
-USER-AGENT,*siri*,DIRECT
-# >> App Store Preview
-DOMAIN,itunes.apple.com,Proxy
-DOMAIN,apps.apple.com,Proxy
-# >> Apple URL Shortener
-DOMAIN-SUFFIX,appsto.re,Proxy
-# >> TestFlight
-DOMAIN,beta.itunes.apple.com,Proxy
-DOMAIN,testflight.apple.com,Proxy
-# >> Spotlight
-DOMAIN,api-glb-sea.smoot.apple.com,Proxy
-# >> Dictionary
-DOMAIN,lookup-api.apple.com,Proxy
+#USER-AGENT,*AssistantServices*,DIRECT
+#USER-AGENT,MobileAsset*,DIRECT
+#USER-AGENT,Siri*,DIRECT
+#USER-AGENT,*siri*,DIRECT
+
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/apple.list,apple
 
 # Proxy
@@ -75,6 +116,7 @@ RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/reject.list,A
 
 # Proxy
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/proxy.list,Proxy
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
 
 # game
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/game.list,game
@@ -82,6 +124,8 @@ RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/game.list,gam
 
 # DIRECT
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/direct.list,DIRECT
+RULE-SET,LAN,DIRECT
+
 
 FINAL,Proxy,dns-failed
 
