--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -24,7 +24,7 @@ network-framework = false
 google = ss, 34.80.227.122, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
 Proxy = select, 🇨🇳CHT11, google, 🇭🇰GIA2, 🇭🇰CMI4, 🇭🇰IPLC32
-油管 = select, Proxy, google, 🇺🇸BGP3, 🇯🇵NTT2 
+油管 = select, Proxy, google, 🇺🇸BGP3, 🇯🇵2 
 tw = select, Proxy, 🇨🇳CHT11
 game = select, DIRECT, Proxy, 🇭🇰IPLC32, 🇭🇰IPLC32
 AD = select, REJECT
