--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -17,16 +17,16 @@ network-framework = false
 🇭🇰CMI4 = ss, cmi4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇭🇰IPLC32 = ss, 118.178.241.44, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇺🇸BGP3 = ss, 175.102.11.145, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
-🇯🇵NTT2 = ss, 140.227.211.250, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇯🇵SB6 = ss, 103.101.223.7, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇯🇵AZ3 = ss, 52.246.179.142, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇯🇵2 = ss, 175.102.11.142, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 
 google = ss, 34.80.227.122, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
-Proxy = select, 🇨🇳CHT11, google, 🇭🇰GIA2, 🇭🇰CMI4, 🇭🇰IPLC32
-油管 = select, Proxy, google, 🇺🇸BGP3, 🇯🇵2 
+Proxy = select, 🇨🇳CHT11, google, 🇭🇰CMI4, 🇭🇰IPLC32
+油管 = select, Proxy, google, 🇺🇸BGP3, 🇯🇵AZ3
 tw = select, Proxy, 🇨🇳CHT11
-game = select, DIRECT, Proxy, 🇭🇰IPLC32, 🇭🇰IPLC32
+game = select, DIRECT, Proxy, 🇭🇰IPLC32
 AD = select, REJECT
 apple = select, DIRECT, Proxy
 
