--- a/quan/Rewrite.conf
+++ b/quan/Rewrite.conf
@@ -11,3 +11,8 @@
 ^https?:\/\/.+\.kingsoft-office-service\.com\/ad url reject-img
 
 ^https?:\/\/ss0\.bdstatic\.com/.+_\d{3}_\d{4}\.jpg url reject-img
+
+^https://oia.zhihu.com/answers/ url reject
+^https?://tieba.baidu.com/mo/q/ url reject
+^https?://app.smzdm.com/xiazai/ url reject
+^https?://m.smzdm.com/app/ url reject
