--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -10,23 +10,20 @@ network-framework = false
 
 [Proxy]
 🇯🇵软银-1 = ss, jp.001.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
+
+🇸🇬IPLC = ss, 120.24.59.40, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇨🇳CHT11= ss, 211.75.30.245, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=itunes.apple.com, udp-relay=true
 🇭🇰AZ1 = ss, 40.83.100.3, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
-🇺🇸GIA6 = ss, 38.121.21.205, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=itunes.apple.com, udp-relay=true
-🇭🇰GIA2 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
-🇭🇰CMI4 = ss, cmi4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
-🇭🇰IPLC32 = ss, 118.178.241.44, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇺🇸BGP3 = ss, 175.102.11.145, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇯🇵SB6 = ss, 103.101.223.7, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
-🇯🇵AZ3 = ss, 52.246.179.142, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
-🇯🇵2 = ss, 175.102.11.142, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇯🇵7 = ss, 175.102.11.185, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 
 google = ss, 34.80.227.122, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
-Proxy = select, 🇨🇳CHT11, google, 🇭🇰CMI4, 🇭🇰IPLC32
-油管 = select, Proxy, google, 🇺🇸BGP3, 🇯🇵AZ3
+Proxy = select, 🇸🇬IPLC, google, 🇯🇵7
+油管 = select, Proxy, google, 🇸🇬IPLC
 tw = select, Proxy, 🇨🇳CHT11
-game = select, DIRECT, Proxy, 🇭🇰IPLC32
+game = select, DIRECT, Proxy
 AD = select, REJECT
 apple = select, DIRECT, Proxy
 
@@ -125,7 +122,7 @@ RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/game.list,gam
 # DIRECT
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/direct.list,DIRECT
 RULE-SET,LAN,DIRECT
-
+RULE-SET,SYSTEM,DIRECT
 
 FINAL,Proxy,dns-failed
 
