--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -4,7 +4,7 @@ skip-proxy = 192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0
 ipv6 = false
 enhanced-mode-by-rule = 1
 show-error-page-for-reject = true
-dns-server = 119.29.29.29, 223.5.5.5,system
+dns-server = 119.29.29.29, 117.50.10.10
 allow-wifi-access = false
 network-framework = false
 
@@ -17,10 +17,12 @@ network-framework = false
 🇺🇸BGP3 = ss, 175.102.11.145, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇯🇵SB6 = ss, 103.101.223.7, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇯🇵7 = ss, 175.102.11.185, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇺🇸gia8 = ss, 103.102.7.28, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇩🇪gia = ss, 82.129.30.6, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 
 google = ss, 34.80.227.122, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
-Proxy = select, 🇸🇬IPLC, google, 🇯🇵7
+Proxy = select, 🇺🇸gia8, google, 🇩🇪gia
 油管 = select, Proxy, google, 🇸🇬IPLC
 tw = select, Proxy, 🇨🇳CHT11
 game = select, DIRECT, Proxy
@@ -124,7 +126,14 @@ RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/direct.list,D
 RULE-SET,LAN,DIRECT
 RULE-SET,SYSTEM,DIRECT
 
+GEOIP,CN,DIRECT
+
 FINAL,Proxy,dns-failed
+
+[Host]
+*.qq.com = server:119.29.29.29
+*.taobao.com = server:223.5.5.5
+*.tmall.com = server:223.5.5.5
 
 [URL Rewrite]
 ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com.tw 302
