--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -143,5 +143,4 @@ FINAL,Proxy,dns-failed
 ^https://www.baidu.com\/\?action=static&ms=1&version=css_page_2@0.* - reject
 
 [Header Rewrite]
-^https?://(www.)?zhihu\.com header-del User-Agent 
-^https?://(www.)?zhihu\.com header-add User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10) AppleWebKit/538.44(KHTML, like Gecko) Version/8.0 Safari/538.44
+^https?://www\.zhihu\.com header-replace User-Agent Mozilla/5.0  (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like  Gecko) Version/12.0.2 Safari/605.1.15
