--- a/quan/Rewrite.conf
+++ b/quan/Rewrite.conf
@@ -16,3 +16,5 @@
 ^https?://tieba.baidu.com/mo/q/ url reject
 ^https?://app.smzdm.com/xiazai/ url reject
 ^https?://m.smzdm.com/app/ url reject
+
+^https?:\/\/.+\.atm\.youku\.com url reject
