--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,45 +1,24 @@
 [General]
 bypass-system = true
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
+skip-proxy = 192.168.0.0/16, 193.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 127.0.0.1, 17.0.0.0/8, localhost, *.local
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = system, 117.50.10.10, 114.114.114.114
+dns-server = 119.29.29.29,223.5.5.5,system
 
 [Rule]
 
 //apple
-USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
-USER-AGENT,*WeatherFoundation*,DIRECT
-USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
-USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
-USER-AGENT,com.apple.geod*,DIRECT
-USER-AGENT,com.apple.Maps,DIRECT
-USER-AGENT,FindMyFriends*,DIRECT
-USER-AGENT,FindMyiPhone*,DIRECT
-USER-AGENT,FMDClient*,DIRECT
-USER-AGENT,FMFD*,DIRECT
-USER-AGENT,fmflocatord*,DIRECT
-USER-AGENT,geod*,DIRECT
-USER-AGENT,locationd*,DIRECT
-USER-AGENT,Maps*,DIRECT
-DOMAIN,api.smoot.apple.com,DIRECT
-DOMAIN,captive.apple.com,DIRECT
-DOMAIN,configuration.apple.com,DIRECT
-DOMAIN,guzzoni.apple.com,DIRECT
-DOMAIN,smp-device-content.apple.com,DIRECT
-DOMAIN-SUFFIX,ess.apple.com,DIRECT
-DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
-DOMAIN-SUFFIX,push.apple.com,DIRECT
-DOMAIN,aod.itunes.apple.com,DIRECT
-DOMAIN,mesu.apple.com,DIRECT
-DOMAIN,api.smoot.apple.cn,DIRECT
-DOMAIN,gs-loc.apple.com,DIRECT
-DOMAIN,mvod.itunes.apple.com,DIRECT
-DOMAIN,streamingaudio.itunes.apple.com,DIRECT
-DOMAIN-SUFFIX,lcdn-locator.apple.com,DIRECT
-DOMAIN-SUFFIX,lcdn-registration.apple.com,DIRECT
-DOMAIN-SUFFIX,ls.apple.com,DIRECT
-DOMAIN,xp.apple.com,DIRECT
+# > Apple
+DOMAIN-SUFFIX,aaplimg.com,DIRECT
+DOMAIN-SUFFIX,apple.co,DIRECT
+DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN-SUFFIX,appstore.com,DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,DIRECT
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,icloud-content.com,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
+DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
 
 //Siri
 USER-AGENT,*AssistantServices*,DIRECT
@@ -67,24 +46,10 @@ DOMAIN,api-glb-sea.smoot.apple.com,PROXY,force-remote-dns
 # >> Dictionary
 DOMAIN,lookup-api.apple.com,PROXY,force-remote-dns
 
-
-DOMAIN,appleiphonecell.com,DIRECT
-DOMAIN-SUFFIX,aaplimg.com,DIRECT
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,me.com,DIRECT
-DOMAIN-SUFFIX,mzstatic.com,DIRECT
-DOMAIN-SUFFIX,itunes.com,DIRECT
-DOMAIN-SUFFIX,appstore.com,DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,DIRECT
-DOMAIN-SUFFIX,icloud-content.com,DIRECT
-DOMAIN-SUFFIX,apple.co,DIRECT
-DOMAIN-SUFFIX,apple.com,DIRECT
-
-//额外
-DOMAIN,analytics.google.com,PROXY,force-remote-dns
-DOMAIN,analyticsinsights-pa.googleapis.com,PROXY,force-remote-dns
-DOMAIN,analyticsreporting.googleapis.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
+# > General
+DOMAIN-KEYWORD,adservice,REJECT
+DOMAIN-KEYWORD,analytics,REJECT
+DOMAIN-KEYWORD,analysis,REJECT
 
 DOMAIN,log.mmstat.com,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
@@ -93,7 +58,13 @@ DOMAIN,ta.trs.cn,REJECT
 DOMAIN,tingyun.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,trackingio.com,REJECT
-
+DOMAIN,ipm.atm.youku.com,REJECT
+DOMAIN,iyes.youku.com,REJECT
+DOMAIN-SUFFIX,inmobi.cn,REJECT
+DOMAIN-SUFFIX,moatads.com,REJECT
+DOMAIN-SUFFIX,inmobi.com,REJECT
+DOMAIN-SUFFIX,inmobicdn.cn,REJECT
+DOMAIN-SUFFIX,hockeyapp.net,REJECT
 
 //江阴bus
 DOMAIN,stats.jpush.cn,REJECT
@@ -136,6 +107,14 @@ DOMAIN,img.auction-ads.wpscdn.cn,REJECT
 DOMAIN,ad-stat.ksosoft.com,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
+DOMAIN,ad-stat.ksosoft.com,REJECT
+DOMAIN,img.auction-ads.wpscdn.cn,REJECT
+DOMAIN,counter.kingsoft.com,REJECT
+DOMAIN,counter.ksosoft.com,REJECT
+DOMAIN,minfo.wps.cn,REJECT
+DOMAIN,mobad.ijinshan.com,REJECT
+DOMAIN,ups.ksmobile.net,REJECT
+DOMAIN,ws.ksmobile.net,REJECT
 
 # > General
 DOMAIN-KEYWORD,umeng,REJECT
@@ -222,6 +201,17 @@ DOMAIN,trackapp.guahao.cn,REJECT
 DOMAIN,traffic.mogujie.com,REJECT
 DOMAIN,wmlog.meituan.com,REJECT
 
+# > Umeng
+DOMAIN,alog.umeng.co,REJECT
+DOMAIN,alog.umeng.com,REJECT
+DOMAIN,alogs.umeng.com,REJECT
+DOMAIN,alog.umengcloud.com,REJECT
+DOMAIN,alogs.umengcloud.com,REJECT
+DOMAIN,ar.umeng.com,REJECT
+DOMAIN,plbslog.umeng.com,REJECT
+DOMAIN,ulogs.umeng.com,REJECT
+DOMAIN,ulogs.umengcloud.com,REJECT
+
 # > Apple
 DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
 DOMAIN-SUFFIX,ads.internal.unity3d.com,REJECT
@@ -233,23 +223,26 @@ DOMAIN,acs4baichuan.m.taobao.com,REJECT
 DOMAIN,adash.m.taobao.com,REJECT
 DOMAIN,adash.man.aliyuncs.com,REJECT
 DOMAIN,adashbc.ut.taobao.com,REJECT
+DOMAIN,adashx.m.taobao.com,REJECT
 DOMAIN,adash-c.ut.taobao.com,REJECT
 DOMAIN,adashxgc.ut.taobao.com,REJECT
 DOMAIN,adashx4yt.m.taobao.com,REJECT
-DOMAIN,apoll.m.taobao.com,REJECT
+DOMAIN,h-adashx.ut.taobao.com,REJECT
 DOMAIN,nbsdk-baichuan.alicdn.com,REJECT
 DOMAIN,tunion-api.m.taobao.com,REJECT
 
 # > Baidu
 DOMAIN-SUFFIX,baidustatic.com,REJECT
+DOMAIN-SUFFIX,cpro.baidu.com,REJECT
+DOMAIN-SUFFIX,pos.baidu.com,REJECT
 DOMAIN,afd.baidu.com,REJECT
+DOMAIN,als.baidu.com,REJECT
 DOMAIN,duclick.baidu.com,REJECT
 DOMAIN,hm.baidu.com,REJECT
 DOMAIN,hmma.baidu.com,REJECT
 DOMAIN,mobads.baidu.com,REJECT
 DOMAIN,mobads-logs.baidu.com,REJECT
 DOMAIN,nsclick.baidu.com,REJECT
-DOMAIN,wn.pos.baidu.com,REJECT
 
 
 # > Google
@@ -271,6 +264,7 @@ DOMAIN,adv.sec.intl.miui.com,REJECT
 DOMAIN,o2o.api.xiaomi.com,REJECT
 
 # > Tencent
+DOMAIN-SUFFIX,beacon.qq.com,REJECT
 DOMAIN-SUFFIX,bugly.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
 DOMAIN-SUFFIX,gdt.qq.com,REJECT
@@ -280,6 +274,7 @@ DOMAIN,adsmind.tc.qq.com,REJECT
 DOMAIN,btrace.qq.com,REJECT
 DOMAIN,mtrace.qq.com,REJECT
 DOMAIN,oth.eve.mdt.qq.com,REJECT
+DOMAIN,pgdt.gtimg.com,REJECT
 DOMAIN,pgdt.gtimg.cn,REJECT
 DOMAIN,pingma.qq.com,REJECT
 DOMAIN,pingtcss.qq.com,REJECT
@@ -287,7 +282,6 @@ DOMAIN,splashqqlive.gtimg.com,REJECT
 DOMAIN,tajs.qq.com,REJECT
 DOMAIN,wxsnsdy.wxs.qq.com,REJECT
 DOMAIN,wxsnsdythumb.wxs.qq.com,REJECT
-DOMAIN-SUFFIX,isdspeed.qq.com,REJECT
 
 //油管
 USER-AGENT,*youtube*,olo,force-remote-dns
@@ -347,16 +341,16 @@ DOMAIN,api.amplitude.com,PROXY,force-remote-dns
 DOMAIN,app.smartmailcloud.com,PROXY,force-remote-dns
 DOMAIN,cdn-images.mailchimp.com,PROXY,force-remote-dns
 DOMAIN,content.jwplatform.com,PROXY,force-remote-dns
-DOMAIN,gate.hockeyapp.net,PROXY,force-remote-dns
 DOMAIN,id.heroku.com,PROXY,force-remote-dns
 DOMAIN,jp.netcdn.space,PROXY,force-remote-dns
-DOMAIN,linear-abematv.akamaized.net,PROXY,force-remote-dns
+DOMAIN,oneclient.sfx.ms,PROXY,force-remote-dns
+DOMAIN,graph.microsoft.com,PROXY,force-remote-dns
 DOMAIN,mobile.pipe.aria.microsoft.com,PROXY,force-remote-dns
 DOMAIN,quantumult.crossutility.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,storage.msn.com,PROXY,force-remote-dns
 DOMAIN,rss.rrys.tv,PROXY,force-remote-dns
 DOMAIN,videos-f.jwpsrv.com,PROXY,force-remote-dns
 DOMAIN,wego.here.com,PROXY,force-remote-dns
-DOMAIN,api.onedrive.com,PROXY,force-remote-dns
 DOMAIN-KEYWORD,bbcfmt,PROXY,force-remote-dns
 DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
 DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
@@ -370,6 +364,8 @@ DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
 DOMAIN-KEYWORD,uk-live,PROXY,force-remote-dns
 DOMAIN-KEYWORD,wikileaks,PROXY,force-remote-dns
 DOMAIN-SUFFIX,0rz.tw,PROXY,force-remote-dns
+DOMAIN-SUFFIX,1drv.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,1drv.ms,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4bluestones.biz,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4shared.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,881903.com,PROXY,force-remote-dns
@@ -392,10 +388,10 @@ DOMAIN-SUFFIX,amazon.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,amazonaws.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ameba.jp,PROXY,force-remote-dns
 DOMAIN-SUFFIX,amplitude.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,anime1.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,android.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,androidify.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,aol.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,anime1.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,apartmentratings.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,apartments.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,apigee.com,PROXY,force-remote-dns
@@ -405,10 +401,10 @@ DOMAIN-SUFFIX,apkmonk.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,apkpure.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,aptoide.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,aralego.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,archive.is,PROXY,force-remote-dns
 DOMAIN-SUFFIX,archive.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,arte.tv,PROXY,force-remote-dns
-DOMAIN-SUFFIX,aralego.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ask.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,assdrty.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,autodraw.com,PROXY,force-remote-dns
@@ -479,11 +475,11 @@ DOMAIN-SUFFIX,comparitech.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,conoha.jp,PROXY,force-remote-dns
 DOMAIN-SUFFIX,costco.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,crackle.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,creativecdn.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,creativelab5.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,crucial.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ctitv.com.tw,PROXY,force-remote-dns
 DOMAIN-SUFFIX,cts.com.tw,PROXY,force-remote-dns
+DOMAIN-SUFFIX,creativecdn.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,cuhk.edu.hk,PROXY,force-remote-dns
 DOMAIN-SUFFIX,cusu.hk,PROXY,force-remote-dns
 DOMAIN-SUFFIX,cw.com.tw,PROXY,force-remote-dns
@@ -628,7 +624,7 @@ DOMAIN-SUFFIX,linksalpha.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,liuli.in,PROXY,force-remote-dns
 DOMAIN-SUFFIX,liuli.uk,PROXY,force-remote-dns
 DOMAIN-SUFFIX,live.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,live.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,livefilestore.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,m.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,madewithcode.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,mail.ru,PROXY,force-remote-dns
@@ -643,7 +639,8 @@ DOMAIN-SUFFIX,mil,PROXY,force-remote-dns
 DOMAIN-SUFFIX,mobile01.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,msauth.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,msn.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,muncloud.asia,PROXY,force-remote-dns
+DOMAIN-SUFFIX,microsoftonline.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,muncloud.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,myactimes.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,mytvsuper.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,n3ro.net,PROXY,force-remote-dns
@@ -652,6 +649,7 @@ DOMAIN-SUFFIX,naver.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nbc.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,netflix.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,netflix.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,nexitcore.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,newsblur.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nflxext.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nflximg.com,PROXY,force-remote-dns
@@ -680,7 +678,7 @@ DOMAIN-SUFFIX,office.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,office365.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ok.ru,PROXY,force-remote-dns
 DOMAIN-SUFFIX,okex.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,onedrive.live.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,onedrive.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,onenote.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,onenote.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,onmicrosoft.com,PROXY,force-remote-dns
@@ -715,8 +713,8 @@ DOMAIN-SUFFIX,rocksdb.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,rsshub.app,PROXY,force-remote-dns
 DOMAIN-SUFFIX,scdn.co,PROXY,force-remote-dns
 DOMAIN-SUFFIX,scmp.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,scribd.com,PROXY,force-remote-dns 
 DOMAIN-SUFFIX,scupio.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,scribd.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,seatguru.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,segment.io,PROXY,force-remote-dns
 DOMAIN-SUFFIX,sehuatang.net,PROXY,force-remote-dns
@@ -832,37 +830,41 @@ DOMAIN-SUFFIX,zattoo.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,zb.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,zello.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,zeronet.io,PROXY,force-remote-dns
-IP-CIDR,104.249.59.0/24,PROXY,no-resolve
-IP-CIDR,109.239.140.0/24,PROXY,no-resolve
-IP-CIDR,13.32.0.0/16,PROXY,no-resolve
-IP-CIDR,13.33.0.0/16,PROXY,no-resolve
-IP-CIDR,13.35.0.0/17,PROXY,no-resolve
-IP-CIDR,140.101.144.0/20,PROXY,no-resolve
-IP-CIDR,149.154.160.0/20,PROXY,no-resolve
-IP-CIDR,18.184.0.0/15,PROXY,no-resolve
-IP-CIDR,18.194.0.0/15,PROXY,no-resolve
-IP-CIDR,18.208.0.0/13,PROXY,no-resolve
-IP-CIDR,18.232.0.0/14,PROXY,no-resolve
-IP-CIDR,205.172.60.0/22,PROXY,no-resolve
-IP-CIDR,52.200.0.0/13,PROXY,no-resolve
-IP-CIDR,52.58.0.0/15,PROXY,no-resolve
-IP-CIDR,52.58.209.134/32,PROXY,no-resolve
-IP-CIDR,52.74.0.0/16,PROXY,no-resolve
-IP-CIDR,52.77.0.0/16,PROXY,no-resolve
-IP-CIDR,52.84.0.0/15,PROXY,no-resolve
-IP-CIDR,54.156.0.0/14,PROXY,no-resolve
-IP-CIDR,54.226.0.0/15,PROXY,no-resolve
-IP-CIDR,54.230.156.0/22,PROXY,no-resolve
-IP-CIDR,54.235.23.242/32,PROXY,no-resolve
-IP-CIDR,54.93.0.0/16,PROXY,no-resolve
-IP-CIDR,54.93.124.31/32,PROXY,no-resolve
-IP-CIDR,67.198.55.0/24,PROXY,no-resolve
-IP-CIDR,91.108.12.0/22,PROXY,no-resolve
-IP-CIDR,91.108.16.0/22,PROXY,no-resolve
-IP-CIDR,91.108.4.0/22,PROXY,no-resolve
-IP-CIDR,91.108.56.0/22,PROXY,no-resolve
-IP-CIDR,91.108.8.0/22,PROXY,no-resolve
-IP-CIDR,104.108.96.0/19,PROXY,no-resolve
+
+
+IP-CIDR,104.249.59.0/24,PROXY,force-remote-dns
+IP-CIDR,109.239.140.0/24,PROXY,force-remote-dns
+IP-CIDR,13.32.0.0/16,PROXY,force-remote-dns
+IP-CIDR,13.33.0.0/16,PROXY,force-remote-dns
+IP-CIDR,13.35.0.0/17,PROXY,force-remote-dns
+IP-CIDR,140.101.144.0/20,PROXY,force-remote-dns
+IP-CIDR,149.154.160.0/20,PROXY,force-remote-dns
+IP-CIDR,18.184.0.0/15,PROXY,force-remote-dns
+IP-CIDR,18.194.0.0/15,PROXY,force-remote-dns
+IP-CIDR,18.208.0.0/13,PROXY,force-remote-dns
+IP-CIDR,18.232.0.0/14,PROXY,force-remote-dns
+IP-CIDR,205.172.60.0/22,PROXY,force-remote-dns
+IP-CIDR,52.200.0.0/13,PROXY,force-remote-dns
+IP-CIDR,52.58.0.0/15,PROXY,force-remote-dns
+IP-CIDR,52.58.209.134/32,PROXY,force-remote-dns
+IP-CIDR,52.74.0.0/16,PROXY,force-remote-dns
+IP-CIDR,52.77.0.0/16,PROXY,force-remote-dns
+IP-CIDR,52.84.0.0/15,PROXY,force-remote-dns
+IP-CIDR,54.156.0.0/14,PROXY,force-remote-dns
+IP-CIDR,54.226.0.0/15,PROXY,force-remote-dns
+IP-CIDR,54.230.156.0/22,PROXY,force-remote-dns
+IP-CIDR,54.235.23.242/32,PROXY,force-remote-dns
+IP-CIDR,54.93.0.0/16,PROXY,force-remote-dns
+IP-CIDR,54.93.124.31/32,PROXY,force-remote-dns
+IP-CIDR,67.198.55.0/24,PROXY,force-remote-dns
+IP-CIDR,91.108.12.0/22,PROXY,force-remote-dns
+IP-CIDR,91.108.16.0/22,PROXY,force-remote-dns
+IP-CIDR,91.108.4.0/22,PROXY,force-remote-dns
+IP-CIDR,91.108.56.0/22,PROXY,force-remote-dns
+IP-CIDR,91.108.8.0/22,PROXY,force-remote-dns
+IP-CIDR,104.108.96.0/19,PROXY,force-remote-dns
+
+
 USER-AGENT,AbemaTV*,PROXY,force-remote-dns
 USER-AGENT,Argo*,PROXY,force-remote-dns
 USER-AGENT,BBCiPlayer*,PROXY,force-remote-dns
@@ -1150,11 +1152,16 @@ USER-AGENT,ting_en,DIRECT
 USER-AGENT,WebTorrent*,DIRECT
 USER-AGENT,WeChat*,DIRECT
 
+
+DOMAIN-SUFFIX,local,DIRECT
+IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
+IP-CIDR,172.16.0.0/12,DIRECT
+IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,134.175.0.0/16,DIRECT
-IP-CIDR,172.16.0.0/12,DIRECT
+
 IP-CIDR,185.188.32.0/24,DIRECT
 IP-CIDR,185.188.33.0/24,DIRECT
 IP-CIDR,185.188.34.0/24,DIRECT
@@ -1163,6 +1170,7 @@ IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,203.205.146.0/24,direct
 IP-CIDR,224.0.0.0/24,DIRECT
 IP-CIDR,239.255.255.250/32,DIRECT
+
 GEOIP,CN,DIRECT
 
 FINAL,PROXY
@@ -1170,6 +1178,7 @@ FINAL,PROXY
 
 [URL Rewrite]
 ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com.tw 302
+^https?:\/\/(www.)?ign\.xn--fiqs8s\/ http://cn.ign.com/ccpref/us 302
 // Wiki
 ^https?:\/\/.+.(m\.)?wikipedia\.org/wiki http://www.wikiwand.com/en 302
 ^https?:\/\/zh.(m\.)?wikipedia\.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
