--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -2,6 +2,7 @@
 loglevel = notify
 skip-proxy = 192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, 127.0.0.1, localhost, *.local
 ipv6 = false
+force-http-engine-hosts = 123.59.31.1,119.18.193.135,122.14.246.33
 enhanced-mode-by-rule = 1
 show-error-page-for-reject = true
 dns-server = 119.29.29.29, 117.50.10.10
@@ -20,6 +21,8 @@ network-framework = false
 🇺🇸gia8 = ss, 103.102.7.28, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇩🇪gia = ss, 82.129.30.6, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 
+
+ss = ss, vtyk.nbclouds.co ,1142, encrypt-method=chacha20, password=cf34c5e8c479, obfs=http, obfs-host=ODQ1ODQ2MDcgIAk6ZmE4NzhkZTQ4MGZkNGRiMg, udp-relay=true
 google = ss, 34.80.227.122, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
 Proxy = select, 🇺🇸gia8, google, 🇩🇪gia
@@ -82,8 +85,97 @@ DOMAIN-SUFFIX,zhengjian.org,REJECT
 DOMAIN-SUFFIX,zhuichaguoji.org,REJECT
 
 
-# SYSTEM直连规则
-# RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/system.list,DIRECT
+DOMAIN,log.mmstat.com,REJECT
+DOMAIN-SUFFIX,51la.net,REJECT
+DOMAIN,cig.com.cn,REJECT
+DOMAIN,ta.trs.cn,REJECT
+DOMAIN,tingyun.com,REJECT
+DOMAIN-SUFFIX,mob.com,REJECT
+DOMAIN-SUFFIX,trackingio.com,REJECT
+DOMAIN-SUFFIX,inmobi.cn,REJECT
+DOMAIN-SUFFIX,moatads.com,REJECT
+DOMAIN-SUFFIX,inmobi.com,REJECT
+DOMAIN-SUFFIX,inmobicdn.cn,REJECT
+DOMAIN-SUFFIX,hockeyapp.net,REJECT
+DOMAIN,ipm.atm.youku.com,REJECT
+DOMAIN,iyes.youku.com,REJECT
+DOMAIN-SUFFIX,criteo.com,REJECT
+
+DOMAIN-SUFFIX,mobileapptracking.com,reject
+
+//江阴bus
+DOMAIN,stats.jpush.cn,REJECT
+DOMAIN,wx.hfxing.cn,REJECT
+DOMAIN,ali-stats.jpush.cn,REJECT
+DOMAIN,experiment.appadhoc.com,REJECT
+
+# > KFC
+DOMAIN,tracker.appadhoc.com,REJECT
+DOMAIN,fp.hwwt8.com,REJECT
+DOMAIN,trackingprd.hwwt8.com,REJECT
+
+DOMAIN-SUFFIX,appbaqend.com,REJECT
+DOMAIN-SUFFIX,data.flurry.com,REJECT
+DOMAIN-SUFFIX,qchannel01.cn,REJECT
+
+# > 高德
+DOMAIN,logs.amap.com,REJECT
+DOMAIN,aoscdn.amap.com,REJECT
+DOMAIN,page.amap.com,REJECT
+DOMAIN,sync.amap.com,REJECT
+DOMAIN,aos-cdn-image.amap.com,REJECT
+DOMAIN,wb.amap.com,REJECT
+DOMAIN,f.amap.com,REJECT
+
+DOMAIN-SUFFIX,wgo.mmstat.com,REJECT
+DOMAIN,fuwu.wap.sogou.com,REJECT
+
+DOMAIN-SUFFIX,appodeal.com,REJECT
+DOMAIN-SUFFIX,applvn.com,REJECT
+DOMAIN,x.appbaqend.com,REJECT
+DOMAIN-SUFFIX,inner-active.mobi,REJECT
+DOMAIN-SUFFIX,applovin.com,REJECT
+DOMAIN,union.uc.cn,REJECT
+DOMAIN-SUFFIX,tlnk.io,REJECT
+DOMAIN-SUFFIX,alexametrics.com,REJECT
+
+# > WPS
+DOMAIN,img.auction-ads.wpscdn.cn,REJECT
+DOMAIN,ad-stat.ksosoft.com,REJECT
+DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
+USER-AGENT,wpsoffice*,REJECT
+
+# Proxy
+
+DOMAIN-SUFFIX,inoreader.com,PROXY
+DOMAIN-SUFFIX,muncloud.me,PROXY
+DOMAIN-SUFFIX,nexitcore.com,PROXY
+DOMAIN,graph.microsoft.com,PROXY
+DOMAIN,oneclient.sfx.ms,PROXY
+DOMAIN-SUFFIX,scribd.com,PROXY 
+DOMAIN-SUFFIX,scupio.com,PROXY
+DOMAIN-SUFFIX,creativecdn.com,PROXY
+DOMAIN-SUFFIX,aralego.com,PROXY
+DOMAIN-SUFFIX,animeone.me,PROXY
+DOMAIN-SUFFIX,anime1.me,PROXY
+DOMAIN-SUFFIX,pscdn.co,PROXY
+DOMAIN-SUFFIX,ampproject.net,PROXY
+DOMAIN-SUFFIX,ampproject.org,PROXY
+DOMAIN-SUFFIX,app-measurement.com,PROXY
+DOMAIN-SUFFIX,msauth.net,PROXY
+DOMAIN-SUFFIX,hotmail.com,PROXY
+DOMAIN-SUFFIX,pixiv.cat,proxy
+DOMAIN-SUFFIX,v2ex.com,direct
+
+DOMAIN-SUFFIX,graph.facebook.com,reject
+DOMAIN-SUFFIX,nuomi.com,reject
+DOMAIN-SUFFIX,opnstat.baidu.com,reject
+DOMAIN-SUFFIX,zt.baidu.com,reject
+
+DOMAIN-SUFFIX,services.mozilla.com,direct
+IP-CIDR,239.255.255.250/32,DIRECT
+IP-CIDR,224.0.0.251/32,DIRECT
+DOMAIN,login.microsoftonline.com,direct
 
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
 
@@ -111,21 +203,26 @@ DOMAIN-SUFFIX,gamer.com.tw,tw
 DOMAIN-SUFFIX,hinet.net,tw
 
 # AD
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/reject.list,AD
 
-# Proxy
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/proxy.list,Proxy
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list,Advertising
 
 # game
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/game.list,game
+#RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/game.list,game
 
 
-# DIRECT
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/direct.list,DIRECT
+# Telegram
+# RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Telegram
+
+# Global 全球加速
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,PROXY
+
+# Apple 服务
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Apple.list,Apple
+
+# China 中国直连
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT
+
 RULE-SET,LAN,DIRECT
-RULE-SET,SYSTEM,DIRECT
-
 GEOIP,CN,DIRECT
 
 FINAL,Proxy,dns-failed
@@ -143,4 +240,5 @@ FINAL,Proxy,dns-failed
 ^https://www.baidu.com\/\?action=static&ms=1&version=css_page_2@0.* - reject
 
 [Header Rewrite]
+^https?://zhidao\.baidu\.com header-replace User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0.2 Safari/605.1.15
 ^https?://www\.zhihu\.com header-replace User-Agent Mozilla/5.0  (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like  Gecko) Version/12.0.2 Safari/605.1.15
