--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -83,7 +83,7 @@ DOMAIN-SUFFIX,wujieliulan.com,REJECT
 DOMAIN-SUFFIX,xinsheng.net,REJECT
 DOMAIN-SUFFIX,zhengjian.org,REJECT
 DOMAIN-SUFFIX,zhuichaguoji.org,REJECT
-
+DOMAIN-SUFFIX,docer.com,REJECT
 
 DOMAIN,log.mmstat.com,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
@@ -165,7 +165,10 @@ DOMAIN-SUFFIX,app-measurement.com,PROXY
 DOMAIN-SUFFIX,msauth.net,PROXY
 DOMAIN-SUFFIX,hotmail.com,PROXY
 DOMAIN-SUFFIX,pixiv.cat,proxy
-DOMAIN-SUFFIX,v2ex.com,direct
+
+DOMAIN-SUFFIX,cloudflare.com,Proxy
+DOMAIN-SUFFIX,qualtrics.com,Proxy
+DOMAIN-SUFFIX,evernote.com,Proxy
 
 DOMAIN-SUFFIX,graph.facebook.com,reject
 DOMAIN-SUFFIX,nuomi.com,reject
@@ -173,11 +176,10 @@ DOMAIN-SUFFIX,opnstat.baidu.com,reject
 DOMAIN-SUFFIX,zt.baidu.com,reject
 
 DOMAIN-SUFFIX,services.mozilla.com,direct
-IP-CIDR,239.255.255.250/32,DIRECT
-IP-CIDR,224.0.0.251/32,DIRECT
+IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
+IP-CIDR,224.0.0.251/32,DIRECT,no-resolve
 DOMAIN,login.microsoftonline.com,direct
-
-DOMAIN-SUFFIX,crashlytics.com,DIRECT
+DOMAIN-SUFFIX,v2ex.com,direct
 
 //Siri
 #USER-AGENT,*AssistantServices*,DIRECT
